# holomorph-

./: README.md  pyproject.toml
benchmarks/: __init__.py  external_compare.py  run_benchmarks.py  validate_requirements.py
examples/: demo.py
fheml/: __init__.py  activations.py  graph.py  params.py  runtime.py  validation.py
tests/: test_core.py
